[project]
name = "gymnasium-mario-master"
version = "0.2.0"
description = "Mario Reinforcement Learning with Grid-based Observations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "tooichitake"},
]
keywords = ["reinforcement-learning", "mario", "gymnasium", "PPO"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium==1.2.1",
    "stable-baselines3==2.7.0",
    "optuna==4.5.0",
    "optunahub>=0.3.1",
    "plotly>=5.0.0",
    "cmaes>=0.12.0",
    "scikit-learn>=1.7.2",
    "moviepy>=1.0.0",
    "matplotlib>=3.0",
    "opencv-python-headless>=4.12.0",
    "seaborn>=0.13",
    "tensorboard>=2.9.1",
    "pygame",
    "psutil",
    "tqdm",
    "rich",
    "ale-py>=0.9.0",
    "pillow",
    "pandas",
    "nes-py @ git+https://github.com/tooichitake/gymnasium-mario.git#subdirectory=nes-py",
    "gymnasium-super-mario-bros @ git+https://github.com/tooichitake/gymnasium-mario.git#subdirectory=gymnasium-super-mario-bros",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[project.urls]
Repository = "https://github.com/tooichitake/gymnasium-mario"
Issues = "https://github.com/tooichitake/gymnasium-mario/issues"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 100