[project]
name = "gymnasium-mario-master"
version = "0.1.0"
description = "Mario Reinforcement Learning with Grid-based Observations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "tooichitake"},
]
keywords = ["reinforcement-learning", "mario", "gymnasium", "PPO"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium[other]==1.2.1",
    "stable-baselines3[extra]==2.7.0",
    "sbx-rl==0.22.0",
    "nes-py @ git+https://github.com/tooichitake/gymnasium-mario.git#subdirectory=nes-py",
    "gymnasium-super-mario-bros @ git+https://github.com/tooichitake/gymnasium-mario.git#subdirectory=gymnasium-super-mario-bros",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[project.urls]
Repository = "https://github.com/tooichitake/gymnasium-mario"
Issues = "https://github.com/tooichitake/gymnasium-mario/issues"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
packages = []  # This tells Poetry not to look for packages

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = {extras = ["other"], version = "1.2.1"}
stable-baselines3 = {extras = ["extra"], version = "2.7.0"}
sbx-rl = "0.22.0"
nes-py = {git = "https://github.com/tooichitake/gymnasium-mario.git", subdirectory = "nes-py"}
gymnasium-super-mario-bros = {git = "https://github.com/tooichitake/gymnasium-mario.git", subdirectory = "gymnasium-super-mario-bros"}

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100