[build-system]
requires = ["scikit-build-core>=0.4.3", "numpy>=1.13.3", "cmake>=3.15", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "nes-py"
version = "9.0.0"
description = "An NES Emulator and Gymnasium interface - A port of the original nes-py to support modern Gymnasium API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["NES", "Emulator", "Gymnasium", "Port"]
authors = [
    {name = "Christian Kauten", email = "kautencreations@gmail.com"},
]
maintainers = [
    {name = "tooichitake"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Emulators",
]
dependencies = [
    "gymnasium>=1.1.1",
    "numpy>=2.2.0",
    "pyglet>=2.1.3",
    "tqdm>=4.48.2",
]

[project.urls]
Homepage = "https://github.com/tooichitake/gymnasium-mario"
"Original Source" = "https://github.com/Kautenja/nes-py"
"Bug Tracker" = "https://github.com/tooichitake/gymnasium-mario/issues"

[project.scripts]
nes_py = "nes_py.app.cli:main"

[tool.scikit-build]
# Specify the package directory
wheel.packages = ["nes_py"]
# Minimum version of CMake
cmake.version = ">=3.15"
# Build in release mode by default
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
CMAKE_OSX_DEPLOYMENT_TARGET = "10.9"

# cibuildwheel configuration removed - users build from source